# scraping-stock

./: .gitignore  Cargo.toml  README.md  devbox.json
.github/workflows/: rust.yml
conf/: set-env.sh
src/: README.md  main.rs  mod.rs
src/scraping/: googlefinance.rs  mod.rs
src/thread/: thread.rs
