[package]
name = "scraping-stock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.3", features = ["json", "blocking"]}
scraper = {version = "0.19.0"}
structopt = {version="0.3.26", features=["suggestions", "yaml"]}
url = "2.5.0"
